--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@
 .nav-item {
   color: white !important;
 }
+.collapse-menu{
+  display: none;
+}
+
 .hero-section {
   width: 70%;
   margin: auto;
